# tetrisRLC

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: api.h  export.h  nn.h
src/: api.c
visualize/: .todo  animation.py  api.pyi  config.json  requirements.txt  run_manim.bat
